Fix overflow text

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -142,6 +142,10 @@ body {}
         }
     }
 
+    .item-title {
+        overflow-wrap: break-word;
+    }
+
     &:hover {
         background-color: lighten($akaigrid-dark, 10%);
     }
